# projects

./: README.md
ceres_learn/: CMakeLists.txt  ceres_learn.kdev4  curve_fitting.cpp  data.txt  min.cpp
ceres_learn/.kdev4/: ceres_learn.kdev4
pcl_icp/: CMakeLists.txt  main.cpp  pcl_icp.kdev4
pcl_icp/.kdev4/: pcl_icp.kdev4
test/: main.cpp
test/.kdev4/: test.kdev4
test_camera/: CMakeLists.txt  main.cpp  test_camera.kdev4
test_camera/.kdev4/: test_camera.kdev4
